--- a/portfolio_item_06.html
+++ b/portfolio_item_06.html
@@ -61,22 +61,27 @@
         <!-- Introduction -->
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                 <strong>System Engineering</strong>
+                 <strong>Systems Engineering</strong>
             </h1>
             <!--Modifications done in .css-->
-            <p class="section__subtitle section__subtitle--intro"><b>Programming and Engineering</b></p>
+            <p class="section__subtitle section__subtitle--intro"><b>Developing Scalable applications</b></p>
             <img src="images/engineering.png" alt="API & Networks" class="intro__img"> <!-- Descriptiion of what the project is -->
         </section>
         <div class="portfolio-item-individual">
             <h2 class ="section__portfolio-item-title">
                 Certifications
-            </h2>
-            <p></p>
+            </h2><br>
             <h3 class = "section__portfolio-item-subtitle"> 
-                Network Security and Database Vulnerabilities
+                 <a href = "https://github.com/data-intelligence-analysis/NetworkProgramming">Network Security and Database Vulnerabilitie</a>
+            </h3><br>  
+        </div>
+        <div class="portfolio-item-individual">
+            <h2 class ="section__portfolio-item-title">
+                Building User Interfaces & Features for NFT Marketplace 
+            </h2><br>
+            <h3 class = "section__portfolio-item-subtitle"> 
+                Checkout our <a href="https://app.solsurfer.xyz/">page</a>
             </h3>
-            <p></p>
-            <p>See <a href = "https://github.com/data-intelligence-analysis/NetworkProgramming">Github</a> to view documentation.</p>
         </div>
         <div class="portfolio-item-individual">
             <h2 class ="section__portfolio-item-title">
